--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\Fabiola\\Documents\\NetBeansProjects
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Fabiola\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Jesus\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
