--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/Bibliioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\Fabiola\\Documents\\Proyecto clinica maternidad\\Maternal\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=F:\\jcalendar-1.3.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
