--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
